fix: misaligned section titles

--- a/_sass/section_header.scss
+++ b/_sass/section_header.scss
@@ -4,7 +4,7 @@
   display: flex;
   gap: 15px;
   align-items: center;
-  transform: translateX(-38px);
+  transform: translateX(-27px);
   margin-top: 50px;
   margin-bottom: 25px;
 
